Modefy passwordreset view

--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_complete.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_complete.html
@@ -21,22 +21,20 @@
         <a class="navbar-brand" href="#">Bike Hub</a>
     </nav>
     <div class="container w-100">
-        <div class="row m-auto" style="max-width: 500px;">
+        <div class="row mt-5" style="max-width: 500px;">
             <div class="m-auto">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">パスワードの再設定</a>
+                        <a class="nav-link active" href="#">パスワードの変更完了</a>
                     </li>
                 </ul>
                 <div class="form-group mt-5 mb-5">
                     <p>
-                        Bike Hubに登録しているメールアドレスを入力してください。
+                        パスワードの更新が完了しました。
                     </p>
-                    <form method="post">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-outline-primary">送信</button>
-                    </form>
+                    <p>
+                        引き続き、BikeHubをお楽しみください！
+                    </p>
                 </div>
             </div>
         </div>
@@ -47,6 +45,8 @@
 
 <script>
     $('input').addClass('form-control')
+    $('li').addClass('small')
+    $('label').addClass('small')
 </script>
 
 </html>
