--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_confirm.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_confirm.html
@@ -22,21 +22,28 @@
     </nav>
     <div class="container w-100">
         <div class="row m-auto" style="max-width: 500px;">
-            <div class="m-auto">
+            <div class="m-2 mt-5">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">パスワードの再設定</a>
+                        <a class="nav-link active" href="#">パスワードの変更</a>
                     </li>
                 </ul>
                 <div class="form-group mt-5 mb-5">
-                    <p>
-                        Bike Hubに登録しているメールアドレスを入力してください。
-                    </p>
+                    {% if validlink %}
                     <form method="post">
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <button type="submit" class="btn btn-outline-primary">送信</button>
+                        <button type="submit" class="btn btn-outline-primary">変更</button>
                     </form>
+                    {% else %}<p>
+                        このパスワードリセットリンクは一度使われているため無効です。
+                        再度パスワード再設定を行ってください。
+                    </p>
+                    <p>
+                        <a href="/web/auth/password_reset/">再設定リンク</a>
+
+                    </p>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -47,6 +54,8 @@
 
 <script>
     $('input').addClass('form-control')
+    $('li').addClass('small')
+    $('label').addClass('small')
 </script>
 
 </html>
