--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_done.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_done.html
@@ -22,21 +22,22 @@
     </nav>
     <div class="container w-100">
         <div class="row m-auto" style="max-width: 500px;">
-            <div class="m-auto">
+            <div class="m-2 mt-5">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">パスワードの再設定</a>
+                        <a class="nav-link active" href="#">送信完了</a>
                     </li>
                 </ul>
                 <div class="form-group mt-5 mb-5">
                     <p>
-                        Bike Hubに登録しているメールアドレスを入力してください。
+                        入力したメールアドレスにパスワード再設定用のリンクを送付しました。
                     </p>
-                    <form method="post">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-outline-primary">送信</button>
-                    </form>
+                    <p>
+                        メールが届いていない場合は、迷惑メールに分類されていないか確認をお願いします。
+                    </p>
+                    <p>
+                        <a href="/web/auth/password_reset/">もう一度送信する</a>
+                    </p>
                 </div>
             </div>
         </div>
