--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_confirm.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_confirm.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
         <a class="navbar-brand" href="#">Bike Hub</a>
     </nav>
-    <div class="container w-100">
+    <div class="container w-100 m-5">
         <div class="row m-auto" style="max-width: 500px;">
             <div class="m-2 mt-5">
                 <ul class="nav nav-tabs">
