--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_confirm.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_confirm.html
@@ -20,8 +20,8 @@
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
         <a class="navbar-brand" href="#">Bike Hub</a>
     </nav>
-    <div class="container w-100 m-5">
-        <div class="row m-auto" style="max-width: 500px;">
+    <div class="container">
+        <div class="m-auto" style="max-width: 500px;">
             <div class="m-2 mt-5">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
