--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/base.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/base.html
@@ -17,6 +17,9 @@
       font-family: 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', Meiryo,
         メイリオ, Osaka, 'MS PGothic', arial, helvetica, sans-serif;
     ">
+    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+        <a class="navbar-brand" href="#">Bike Hub</a>
+    </nav>
     <div id="page-content" class="wrapper">
         {% block body %}
 
