add: adsense script

--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/base.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/base.html
@@ -13,6 +13,9 @@
 
 </head>
 
+<script data-ad-client="ca-pub-8220669417943263" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 <body class="d-flex flex-column" style="
       font-family: 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', Meiryo,
         メイリオ, Osaka, 'MS PGothic', arial, helvetica, sans-serif;
