--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
@@ -85,7 +85,7 @@
                             </a>
 
                             <a href="https://web.bikehub.app/" class="btn btn-outline-secondary m-2">
-                                <p class="mb-0"><i class="far fa-browser mr-3"></i>Webで見る</p>
+                                <p class="mb-0"><i class="fa fa-laptop mr-3"></i>Webで見る</p>
                             </a>
                         </div>
                     </div>
