--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/base.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/base.html
@@ -13,7 +13,13 @@
 
     <script data-ad-client="ca-pub-8220669417943263" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    <script>
+        function addDarkmodeWidget() {
+            new Darkmode().showWidget();
+        }
+        window.addEventListener('load', addDarkmodeWidget);
+    </script>
 </head>
 
 
