--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
     <script data-ad-client="ca-pub-8220669417943263" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        
+
 </head>
 <style>
     .remove-scroll {
@@ -87,6 +87,11 @@
 
                             <a href="https://web.bikehub.app/" class="btn btn-outline-secondary m-2">
                                 <p class="mb-0"><i class="fa fa-laptop mr-3"></i>Webで見る</p>
+                            </a>
+
+                            <a href="bikehub://article/9e37d28b-b712-4638-b37b-29ec58231b18"
+                                class="fa fa-newspaper-o m-2">
+                                <p class="mb-0"><i class="fa fa-laptop mr-3"></i>アプリを開く</p>
                             </a>
                         </div>
                     </div>
