add: adsense script

--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
@@ -89,9 +89,8 @@
                                 <p class="mb-0"><i class="fa fa-laptop mr-3"></i>Webで見る</p>
                             </a>
 
-                            <a href="bikehub://article/9e37d28b-b712-4638-b37b-29ec58231b18"
-                                class="fa fa-newspaper-o m-2">
-                                <p class="mb-0"><i class="fa fa-laptop mr-3"></i>アプリを開く</p>
+                            <a href="bikehub://article/9e37d28b-b712-4638-b37b-29ec58231b18" class="btn btn-outline-secondary m-2">
+                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
                             </a>
                         </div>
                     </div>
