--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
@@ -88,8 +88,28 @@
                             <a href="https://web.bikehub.app/" class="btn btn-outline-secondary m-2">
                                 <p class="mb-0"><i class="fa fa-laptop mr-3"></i>Webで見る</p>
                             </a>
+                            <a href="bikehub://article/9e37d28b-b712-4638-b37b-29ec58231b18" class=" m-2">
+                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
+                            </a>
 
-                            <a href="bikehub://Clip" class="btn btn-outline-secondary m-2">
+                            <a href="bikehub://--/article/9e37d28b-b712-4638-b37b-29ec58231b18" class=" m-2">
+                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
+                            </a>
+
+                            <a href="exp://192.168.0.103:19000/--/article/9e37d28b-b712-4638-b37b-29ec58231b18"
+                                class=" m-2">
+                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
+                            </a>
+
+                            <a href="bikehub://--/clip" class="btn btn-outline-secondary m-2">
+                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
+                            </a>
+
+                            <a href="exp://192.168.0.103:19000/--/clip" class="btn btn-outline-secondary m-2">
+                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
+                            </a>
+
+                            <a href="bikehub://--/Clip" class="btn btn-outline-secondary m-2">
                                 <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
                             </a>
                         </div>
