--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
@@ -89,46 +89,11 @@
                                 <p class="mb-0"><i class="fa fa-laptop mr-3"></i>Webで見る</p>
                             </a>
                             
-                            <a href="bikehub:///article/9e37d28b-b712-4638-b37b-29ec58231b18"
+                            <a href="bikehub://"
                                 class="btn btn-outline-secondary m-2">
                                 <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
                             </a>
 
-                            <a href="bikehub://--/article/9e37d28b-b712-4638-b37b-29ec58231b18"
-                                class="btn btn-outline-secondary m-2">
-                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
-                            </a>
-
-                            <a href="bikehub:///--/article/9e37d28b-b712-4638-b37b-29ec58231b18"
-                                class="btn btn-outline-secondary m-2">
-                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
-                            </a>
-
-
-
-
-                            <a href="bikehub:///article/9e37d28b-b712-4638-b37b-29ec58231b18/"
-                                class="btn btn-outline-secondary m-2">
-                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
-                            </a>
-
-                            <a href="bikehub://--/article/9e37d28b-b712-4638-b37b-29ec58231b18/"
-                                class="btn btn-outline-secondary m-2">
-                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
-                            </a>
-
-                            <a href="bikehub:///--/article/9e37d28b-b712-4638-b37b-29ec58231b18/"
-                                class="btn btn-outline-secondary m-2">
-                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
-                            </a>
-
-                            <a href="bikehub:///--/clip" class="btn btn-outline-secondary m-2">
-                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
-                            </a>
-
-                            <a href="bikehub:///--/Clip" class="btn btn-outline-secondary m-2">
-                                <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
-                            </a>
                         </div>
                     </div>
                 </div>
