--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/base.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="description" content="バイクを愛するすべての人のプラットフォーム">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block extra_head %} {% endblock %} {% load static %}
-
+    <meta name="apple-itunes-app" content="app-id=1531692067, app-argument=bikehub://" key="apple-itunes-app">
 
 </head>
 
