--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/out_publish/index.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/out_publish/index.html
@@ -17,6 +17,7 @@
   <link rel="preload" href="/static/_next/static/chunks/pages/_app-e19a7f3c96a15a291824.js" as="script" />
   <link rel="preload" href="/static/_next/static/chunks/29107295.f91c0918ea9770d2ed7d.js" as="script" />
   <link rel="preload" href="/static/_next/static/chunks/pages/index-44312df07b60446e83d6.js" as="script" />
+  <script data-ad-client="ca-pub-8220669417943263" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <style>
     /**
  * Building on the RNWeb reset:
