--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
@@ -7,7 +7,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="apple-itunes-app" content="app-id=1531692067, app-argument=bikehub://" key="apple-itunes-app">
+    <meta name="apple-itunes-app" content="app-id=1531692067, app-argument=bikehub://">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
         integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -87,9 +87,8 @@
                             <a href="https://web.bikehub.app/" class="btn btn-outline-secondary m-2">
                                 <p class="mb-0"><i class="fa fa-laptop mr-3"></i>Webで見る</p>
                             </a>
-                            
-                            <a href="bikehub://"
-                                class="btn btn-outline-secondary m-2">
+
+                            <a href="bikehub://" class="btn btn-outline-secondary m-2">
                                 <p class="mb-0"><i class="fa fa-newspaper-o mr-3"></i>アプリを開く</p>
                             </a>
 
