--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/privacy_policy.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/privacy_policy.html
@@ -26,7 +26,7 @@
                 <h1>【BikeHub】プライバシーポリシー</h1>
             </header>
             <div class="article-body">
-                <p>当サービスであるhttps://bikehub.app/及びアプリケーションのBikeHub(以下、当サービスと記述します。)では、ご利用いただく方の個人情報について、個人情報の保護に関する法律やその他の関係法令を遵守し、以下に定めるプライバシーポリシーに従って適切に取り扱うものといたします。
+                <p>当サービスであるBikeHub(以下、当サービスと記述します。)では、ご利用いただく方の個人情報について、個人情報の保護に関する法律やその他の関係法令を遵守し、以下に定めるプライバシーポリシーに従って適切に取り扱うものといたします。
                 </p>
                 <p>以下に当サービスのプライバシーポリシーを記載します。</p>
                 <p><strong>個人情報の管理</strong></p>
@@ -81,7 +81,7 @@
                 <p><strong>運営責任者情報</strong>当社の個人情報の取扱に関するお問い合せは下記までご連絡ください。</p>
                 <p>BikeHub</p>
                 <p>開発者:日高悠太</p>
-                <p>HP：https://bikehub.app/</p>
+                <p>HP：https://app.bikehub.app/</p>
                 <p>メールアドレス：info@bikehub.app</p>
             </div>
         </blockquote>
