--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/email_confirm.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/email_confirm.html
@@ -15,30 +15,26 @@
                 <h5 class="card-header">{% trans "Confirm E-mail Address" %}</h5>
                 <div class="card-body">
                     <div class="m-auto text-center">
-
-
+                        
+                        
                         {% if confirmation %}
-
+                        
                         {% user_display confirmation.email_address.user as user_display %}
-
-                        <samll>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a
-                                href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user
-                            {{ user_display }}.{% endblocktrans %}</small>
-
-                            <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-                                {% csrf_token %}
-                                <button class="btn btn-outline-info" type="submit">{% trans 'Confirm' %}</button>
-                            </form>
-
-                            {% else %}
-
-                            {% url 'account_email' as email_url %}
-
-                            <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a
-                                    href="{{ email_url }}">issue a new e-mail confirmation
-                                    request</a>.{% endblocktrans %}</p>
-
-                            {% endif %}
+                        
+                        <samll>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</small>
+                        
+                        <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+                        {% csrf_token %}
+                            <button class="btn btn-outline-info" type="submit">{% trans 'Confirm' %}</button>
+                        </form>
+                        
+                        {% else %}
+                        
+                        {% url 'account_email' as email_url %}
+                        
+                        <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+                        
+                        {% endif %}
                     </div>
                 </div>
             </div>
