--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
@@ -57,17 +57,17 @@
                     <div style="max-width: 1000px;">
                         <div class="remove-scroll" style="white-space:nowrap;
   overflow:scroll;">
-                            <img src="{% static '/users/img/1.png' %}" class="rounded mx-auto m-2"
+                            <img src="{% static '/media/site_assets/1.png' %}" class="rounded mx-auto m-2"
                                 style="width: 250px;">
-                            <img src="{% static '/users/img/2.png' %}" class="rounded mx-auto m-2"
+                            <img src="{% static '/media/site_assets/2.png' %}" class="rounded mx-auto m-2"
                                 style="width: 250px;">
-                            <img src="{% static '/users/img/3.png' %}" class="rounded mx-auto m-2"
+                            <img src="{% static '/media/site_assets/3.png' %}" class="rounded mx-auto m-2"
                                 style="width: 250px;">
-                            <img src="{% static '/users/img/4.png' %}" class="rounded mx-auto m-2"
+                            <img src="{% static '/media/site_assets/4.png' %}" class="rounded mx-auto m-2"
                                 style="width: 250px;">
-                            <img src="{% static '/users/img/5.png' %}" class="rounded mx-auto m-2"
+                            <img src="{% static '/media/site_assets/5.png' %}" class="rounded mx-auto m-2"
                                 style="width: 250px;">
-                            <img src="{% static '/users/img/6.png' %}" class="rounded mx-auto m-2"
+                            <img src="{% static '/media/site_assets/6.png' %}" class="rounded mx-auto m-2"
                                 style="width: 250px;">
                         </div>
                     </div>
