--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/index.html
@@ -84,7 +84,7 @@
                                 <p class="mb-0"><i class="fa fa-apple mr-3"></i>Apple StoreでDL</p>
                             </a>
 
-                            <a href="https://web.bikehub.app/" class="btn btn-outline-secondary m-2">
+                            <a href="https://web.bikehub.pw/" class="btn btn-outline-secondary m-2">
                                 <p class="mb-0"><i class="fa fa-laptop mr-3"></i>Webで見る</p>
                             </a>
 
