--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/password_reset_from_key.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/account/password_reset_from_key.html
@@ -1,23 +1,19 @@
-{% extends "account/base.html" %} {% load i18n %} {% block head_title %}{% trans
-"Change Password" %}{% endblock %} {% block content %}
+{% extends "account/base.html" %} {% load i18n %} {% block head_title %}{% trans "Change Password" %}{% endblock %} {% block content %}
 
 <div class="container" style="max-width: 500px;">
   <div class="row justify-content-md-center mt-5">
     <div class="col-md-auto">
       <div class="card bg-light mb-3">
         <h5 class="card-header">
-          {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change
-          Password" %}{% endif %}
+          {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}
         </h5>
         <div class="card-body">
           <div class="m-auto text-center">
-            {% if token_fail %} {% url 'account_reset_password' as
-            passwd_reset_url %}
+            {% if token_fail %} {% url 'account_reset_password' as passwd_reset_url %}
             <p>
               {% blocktrans %}The password reset link was invalid, possibly
               because it has already been used. Please request a
-              <a href="{{ passwd_reset_url }}">new password reset</a>.{%
-              endblocktrans %}
+              <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
             </p>
             {% else %} {% if form %}
             <form method="POST" action="{{ action_url }}">
