--- a/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_form.html
+++ b/nginx-unit-data/src/bikehub/bikehub/apps/users/templates/registration/custom_password_reset_form.html
@@ -30,7 +30,7 @@
                 </ul>
                 <div class="form-group mt-5 mb-5">
                     <p>
-                        Bike Hubに登録しているメールアドレスを入力してください。
+                        パスワードの再設定をお願いします
                     </p>
                     <form method="post">
                         {% csrf_token %}
